full-moon/tests/cases/fail/parser/last-stmt-2/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: expected `end` to close function body block
  ┌─ source.lua:2:2
  │
2 │     return
  │     ^^^^^^

error[ast]: expected `)` to close function call
  ┌─ source.lua:1:16
  │
1 │ local a = pcall(function()
  │                ^

error[ast]: unexpected token, this needs to be a statement
  ┌─ source.lua:4:1
  │
4 │ end)
  │ ^^^


